<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="LightBulb" Id="{685d39df-936c-4c17-9228-e7008575bb58}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	(* Input *)
	StartSwitch				:	BOOL;
	StopSwitch				:	BOOL;
	StartSignal				:	BOOL;
	StopSignal				:	BOOL;
	
	(* Output *)
	YellowLED		AT%Q*	:	BOOL	:= FALSE;
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>